--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ html, body {
             padding-right: 40px;
             color: rgb(56, 9, 56);
             }
+            #boton:hover{
+                color: rgb(222, 225, 228);
+            }
 /* fin nav*/
 
 /* inicio main*/
@@ -60,13 +63,27 @@ html, body {
         #main-section{
             display: inline-block;
             padding-bottom: 20px;
-            }
-            #main-section-div{
-                box-shadow: 3px 3px 15px rgb(32, 32, 32);
-                }
+            }            
             .carousel{
                 box-shadow: 3px 3px 15px rgb(32, 32, 32);
                 }
+            #main-section-div{
+                box-shadow: 3px 3px 15px rgb(32, 32, 32);
+                display: flex;
+                justify-content: center;
+                }
+                #titulo{
+                    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                    font-size:x-large;
+                    padding-bottom: 15px;
+                    text-align: center;
+                    }
+                    #text{
+                        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                        font-size: 2.2vh ;
+                        text-align: center;
+                        }
+
 
 /* fin main*/
 
@@ -87,6 +104,9 @@ html, body {
         background-color: rgb(215, 181, 247, .4); 
         box-shadow: 3px 3px 35px rgb(32, 32, 32);
         }
+        .ubicacion{
+            box-shadow: 3px 3px 15px rgb(32, 32, 32);
+            }
 /* fin footerv*/
 
 /* TIENDA*/
