--- a/css/style.css
+++ b/css/style.css
@@ -1,192 +1,147 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    }
-html, body {
-    max-width: 100% !important;
-    overflow-x: hidden !important;
-    }
-#body{
-        background-image: url(../img/fondo.png);
-        background-attachment: fixed;
-        margin: 0;
-        }
-        .card { background-color: rgba(245, 245, 245, 0.2); }
-        .card-header, .card-footer { opacity: 1.2}
-/* inicio nav*/
-    #navbar{
-        box-shadow: 3px 3px 15px rgb(32, 32, 32);
-        }
-        .bg-nav{    
-            background-color: rgb(215, 181, 247, .4); 
-            position: fixed;
-            z-index: 2;
-            width: 100vw;
-            }
-        .logo{
-            font-family: 'Dancing Script', cursive;
-            color: rgb(92, 40, 92);
-            font-size:230%;
-            }
-        #boton{  
-            padding-right: 40px;
-            color: rgb(56, 9, 56);
-            }
-            #boton:hover{
-                color: rgb(222, 225, 228);
-            }
-/* fin nav*/
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap");
+#navbar {
+  box-shadow: 3px 3px 15px #202020;
+  background-color: rgba(215, 181, 247, 0.4);
+  position: fixed;
+  z-index: 2;
+  width: 100vw; }
+  #navbar .logo {
+    font-family: 'Dancing Script', cursive;
+    color: rgba(92, 40, 92, 0.9);
+    font-size: 3em;
+    text-shadow: 2px 1px 30px #332c30; }
+  #navbar #boton {
+    padding-right: 40px;
+    color: #00080f; }
+  #navbar #boton:hover {
+    color: #dee1e4; }
 
-/* inicio main*/
-            h1{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
-                font-weight: 450;
-                width: 100vw;
-                font-size:xx-large;
-                text-align: center;
-                text-shadow: 2px 1px 3px rgb(51, 44, 48);
-                margin-top: 10px;
-                }
-            .biovana{
-                justify-content: center;
-                font-family: 'Dancing Script', cursive; 
-                font-size:xxx-large;
-                color: rgb(92, 40, 92);
-                padding-left: 10px;
-                position: relative;
-                animation: biovana 4s forwards;
-                }
-        #main-section{
-            display: inline-block;
-            padding-bottom: 20px;
-            }            
-            .carousel{
-                box-shadow: 3px 3px 15px rgb(32, 32, 32);
-                }
-            #main-section-div{
-                box-shadow: 3px 3px 15px rgb(32, 32, 32);
-                display: flex;
-                justify-content: center;
-                }
-                #titulo{
-                    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                    font-size:x-large;
-                    padding-bottom: 15px;
-                    text-align: center;
-                    }
-                    #text{
-                        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                        font-size: 2.2vh ;
-                        text-align: center;
-                        }
+#footer {
+  background-color: rgba(215, 181, 247, 0.4);
+  box-shadow: 3px 3px 35px #202020; }
+  #footer .ubicacion {
+    box-shadow: 3px 3px 15px #202020; }
 
+@media screen and (max-width: 1262px) {
+  h2 {
+    display: none; } }
 
-/* fin main*/
-
-/* inicio aside*/
-    #aside{ 
-        display: inline-block;
-        position: relative;
-        bottom: 40px;
-        }
-        #aside-div2{
-            box-shadow: 3px 3px 15px rgb(32, 32, 32);
-            }
-
-/* fin aside*/
-
-/* inicio footer*/
-    #footer{    
-        background-color: rgb(215, 181, 247, .4); 
-        box-shadow: 3px 3px 35px rgb(32, 32, 32);
-        }
-        .ubicacion{
-            box-shadow: 3px 3px 15px rgb(32, 32, 32);
-            }
-/* fin footerv*/
-
-/* TIENDA*/
-    h3{
-        font-family: 'Dancing Script', cursive; 
-        font-size:xxx-large;
-        color: rgb(92, 40, 92);
-        position: relative;
-        animation: h3 4s forwards;
-        text-shadow: 2px 1px 3px rgb(51, 44, 48);
-        margin: 10px;
-        }
-        #tienda-div{
-            box-shadow: 10px 3px 30px  rgb(32, 32, 32);
-            }
-/* FIN TIENDA */
-
-/* CONTACTO*/
-    .contact-main{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        }
-    .main-div{
-        background-color:  rgb(215, 181, 247, .4);
-        border-radius: 3%;
-        box-shadow: 5px 5px 15px gray;
-        }
-/* FIN CONTACTO */
-
-/* NOSOTRAS*/
-
-
-/* FIN NOSOTRAS*/
-
-/* DISTRIBUIDORES*/
-    #main-dist{
+@media screen and (max-width: 1097px) {
+  #main-section-div {
+    width: 100vw; }
+  #aside {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap; } }
+
+@media screen and (max-width: 992px) {
+  .ubicacion {
+    display: none; } }
+
+body main h3 {
+  font-family: 'Dancing Script', cursive;
+  font-size: xxx-large;
+  color: #5c285c;
+  position: relative;
+  animation: h3 4s forwards;
+  text-shadow: 2px 1px 30px #332c30;
+  margin: 10px; }
+
+body main #tienda-div {
+  box-shadow: 10px 3px 30px #202020; }
+
+body #main-nosotros {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+body main h3 {
+  font-family: "Dancing Script", cursive;
+  font-size: 3em;
+  color: rgba(92, 40, 92, 0.9);
+  position: relative;
+  animation: h3 4s forwards;
+  text-shadow: 2px 1px 30px #332c30;
+  margin: 10px;
+  padding-bottom: 10px; }
+
+.main-contact {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+body main h3 {
+  font-family: "Dancing Script", cursive;
+  font-size: 3em;
+  color: rgba(92, 40, 92, 0.9);
+  position: relative;
+  animation: h3 4s forwards;
+  text-shadow: 2px 1px 30px #332c30;
+  margin: 10px;
+  padding-bottom: 10px; }
+
+.main-div {
+  background-color: rgba(215, 181, 247, 0.4);
+  border-radius: 3%;
+  width: 40%; }
+
+body #main-dist {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+body #distribuidor {
+  display: flex;
+  max-width: 600px;
+  box-shadow: 10px 3px 30px #202020;
+  border-radius: 3%; }
+
+html, body {
+  max-width: 100% !important;
+  overflow-x: hidden !important; }
+
+#body {
+  background-image: url(../img/fondo.png);
+  background-attachment: fixed;
+  margin: 0; }
+  #body .card {
+    background-color: rgba(245, 245, 245, 0.2); }
+  #body .card-header, #body .card-footer {
+    opacity: 1.2; }
+  #body .carousel {
+    box-shadow: 10px 3px 30px #202020; }
+  #body h1 {
+    display: flex;
     justify-content: center;
     align-items: center;
-        }
-
-    #distribuidor{
-    display:flex;
-    max-width: 600px;
-    box-shadow: 10px 3px 30px  rgb(32, 32, 32);
-    border-radius: 3%;
-        }
-
-/* FIN DISTRIBUIDORES*/
-
-@media screen and (max-width: 1262px){
-        h2{
-            display: none;
-            }
-                }
-    @media screen and (max-width: 1097px){
-        #main-section-div{
-            width: 100vw;
-            }
-        #aside{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            }
-        }
-@media screen and (max-width: 992px){
-    .ubicacion{
-        display: none;
-        }
-        }
-
-@keyframes biovana {
-    from {right: -400px;}
-    to {right: 0px;
-    animation-timing-function: cubic-bezier(0.25,0.1,0.25,1);}
-        }
-    @keyframes h3 {
-        from {right: -400px;}
-        to {right: 0px;
-        animation-timing-function: cubic-bezier(0.25,0.1,0.25,1);}
-        }
+    font-family: "Dancing Script", cursive;
+    font-weight: 600;
+    width: 100vw;
+    font-size: 3em;
+    text-align: center;
+    text-shadow: 2px 1px 30px #332c30;
+    margin-top: 10px;
+    color: rgba(92, 40, 92, 0.9);
+    animation: biovana 4s forwards; }
+  #body section #main-section-div {
+    box-shadow: 2px 1px 30px #332c30;
+    display: flex;
+    justify-content: center; }
+  #body h5 #titulo {
+    font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+    font-size: 1em;
+    padding-bottom: 15px;
+    text-align: center; }
+  #body p #text {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2.2vh;
+    text-align: center; }
+  #body #aside {
+    display: inline-block;
+    position: relative;
+    bottom: 40px;
+    margin-left: 30px; }
+  #body #aside-div2 {
+    box-shadow: 3px 3px 15px #202020; }
