--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -7,6 +7,7 @@ $secondaryFont:'Segoe UI', Tahoma, Verdana, sans-serif;
 //text sizing
 $textSm:.8em;
 $textMd:1em;
+$textMd2:1.3em;
 $textLg:2em;
 $textXl:3em;
 
