--- a/scss/tienda.scss
+++ b/scss/tienda.scss
@@ -1,12 +1,20 @@
 body main h3{
-    font-family: 'Dancing Script', cursive; 
+    font-family:$mainFont; 
     font-size:xxx-large;
-    color: rgb(92, 40, 92);
+    color: $secondaryColor;
     position: relative;
     animation: h3 4s forwards;
     text-shadow: $shadow2;
     margin: 10px;
+
 }
 body main #tienda-div{
     box-shadow:$shadow3;
+    cursor: pointer;
+    font-family: $secondaryFont;
+    text-align: center;
+    &:hover{
+        transform: scale(1.2);
+        transition: all .5s;
+    }
 }
