--- a/scss/distribuidores.scss
+++ b/scss/distribuidores.scss
@@ -10,5 +10,10 @@ body{
                 max-width: 600px;
                 box-shadow: $shadow3;
                 border-radius: 3%;
+                font-family:$secondaryFont;
+                &:hover{
+                    transform: scale(1.05);
+                    transition: all .4s;
+                }
                 }
 }
