--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -2,13 +2,14 @@
 
 // font
 $mainFont:'Dancing Script', cursive;
-$secondaryFont:'Segoe UI', Tahoma, Verdana, sans-serif;
+$secondaryFont:sans-serif,'Segoe UI', Tahoma, Verdana, ;
 
 //text sizing
 $textSm:.8em;
 $textMd:1em;
-$textMd2:1.3em;
+$textMd2:1.1em;
 $textLg:2em;
+$textLg2:2.5em;
 $textXl:3em;
 
 //weight
