--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,8 +1,15 @@
-// variables globales
-$mainColor:rgba(215, 181, 247, .4);
-$secondaryColor:rgba(92, 40, 92, .9);
-$white:rgb(222, 225, 228);
-$black: rgb(0, 8, 15);
+
+
+// variables globales - mapa de colores
+
+
+$mainColor:#d7b5f7b3;
+$secondaryColor:#5c285ce6;
+$secondaryColor2:#5c285c;
+$tercerColor:#381938;
+$white:#dee1e4;
+$black: #00080f;
 $shadow:3px 3px 15px rgb(32, 32, 32);
 $shadow2:2px 1px 30px rgb(51, 44, 48);
 $shadow3:10px 3px 30px  rgb(32, 32, 32);
+$bgColor:rgba(245, 245, 245, 0.2)
