--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&display=swap");
+h3, body h2 {
+  font-family: "Dancing Script", cursive;
+  font-size: 3em;
+  color: #5c285ce6;
+  position: relative;
+  animation: h3 4s forwards;
+  text-shadow: 2px 1px 30px #332c30;
+  margin: 10px;
+  padding-bottom: 10px; }
+
 #navbar {
   box-shadow: 10px 3px 30px #202020;
-  background-color: rgba(215, 181, 247, 0.4);
-  position: fixed;
-  z-index: 2;
-  width: 100vw; }
+  background-color: #d7b5f7b3;
+  width: 100vw;
+  z-index: 1; }
   #navbar .logo {
     font-family: 'Dancing Script', cursive;
-    color: rgba(92, 40, 92, 0.9);
-    font-size: 3em;
-    text-shadow: 2px 1px 30px #332c30; }
+    color: #5c285ce6;
+    font-size: 2.5em; }
   #navbar #boton {
     padding-right: 40px;
     color: #00080f; }
     #navbar #boton:hover {
-      color: #dee1e4;
-      font-size: 1.3em; }
+      color: #5c285ce6;
+      transform: scale(1.3);
+      transition: all .4s; }
 
 #footer {
-  background-color: rgba(215, 181, 247, 0.4);
+  background-color: #d7b5f7b3;
   box-shadow: 3px 3px 35px #202020; }
+  #footer #boton {
+    color: #00080f; }
   #footer .ubicacion {
     box-shadow: 3px 3px 15px #202020; }
 
@@ -27,9 +38,9 @@
   h2 {
     display: none; } }
 
-@media screen and (max-width: 1097px) {
+@media screen and (max-width: 1000px) {
   #main-section-div {
-    width: 100vw; }
+    width: 95vw; }
   #aside {
     display: flex;
     flex-direction: row;
@@ -39,131 +50,154 @@
   .ubicacion {
     display: none; } }
 
-body main h3 {
-  font-family: "Dancing Script", cursive;
-  font-size: xxx-large;
-  color: rgba(92, 40, 92, 0.9);
-  position: relative;
-  animation: h3 4s forwards;
-  text-shadow: 2px 1px 30px #332c30;
-  margin: 10px; }
+@media screen and (max-width: 454px) {
+  #logo {
+    font-size: 1.1em; } }
 
 body main #tienda-div {
   box-shadow: 10px 3px 30px #202020;
   cursor: pointer;
-  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
-  text-align: center; }
+  font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
+  text-align: center;
+  margin-bottom: 10px; }
   body main #tienda-div:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: all .5s; }
+  body main #tienda-div .btn {
+    background-color: #d7b5f7b3;
+    color: #00080f;
+    border-color: #381938; }
+    body main #tienda-div .btn:hover {
+      background-color: #381938;
+      color: #dee1e4;
+      border-color: #d7b5f7b3; }
 
 body #main-nosotros {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center; }
-
-body main h3 {
-  font-family: "Dancing Script", cursive;
-  font-size: 3em;
-  color: rgba(92, 40, 92, 0.9);
-  position: relative;
-  animation: h3 4s forwards;
-  text-shadow: 2px 1px 30px #332c30;
-  margin: 10px;
-  padding-bottom: 10px; }
+  align-items: center;
+  flex-direction: column; }
 
 .main-contact {
   display: flex;
   justify-content: center;
   align-items: center; }
-
-body main h3 {
-  font-family: "Dancing Script", cursive;
-  font-size: 3em;
-  color: rgba(92, 40, 92, 0.9);
-  position: relative;
-  animation: h3 4s forwards;
-  text-shadow: 2px 1px 30px #332c30;
-  margin: 10px;
-  padding-bottom: 10px; }
-
-.main-div {
-  background-color: rgba(215, 181, 247, 0.4);
-  border-radius: 3%;
-  width: 40%;
-  box-shadow: 10px 3px 30px #202020; }
-  .main-div:hover {
-    transform: scale(1.05);
-    transition: all .4s; }
+  .main-contact .main-div {
+    background-color: #d7b5f7b3;
+    border-radius: 3%;
+    box-shadow: 10px 3px 30px #202020; }
+    .main-contact .main-div:hover {
+      transform: scale(1.04);
+      transition: all .4s; }
+    .main-contact .main-div .btn {
+      background-color: #d7b5f7b3;
+      color: #00080f;
+      border-color: #381938; }
+      .main-contact .main-div .btn:hover {
+        background-color: #381938;
+        color: #dee1e4;
+        border-color: #d7b5f7b3; }
 
 body #main-dist {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center; }
-
-body #distribuidor {
-  display: flex;
-  max-width: 600px;
-  box-shadow: 10px 3px 30px #202020;
-  border-radius: 3%;
-  font-family: "Segoe UI", Tahoma, Verdana, sans-serif; }
-  body #distribuidor:hover {
-    transform: scale(1.05);
-    transition: all .4s; }
+  align-items: center;
+  flex-direction: column; }
+  body #main-dist #distribuidor {
+    display: flex;
+    max-width: 600px;
+    box-shadow: 10px 3px 30px #202020;
+    border-radius: 3%;
+    font-family: sans-serif, "Segoe UI", Tahoma, Verdana; }
+    body #main-dist #distribuidor:hover {
+      transform: scale(1.05);
+      transition: all .4s; }
 
 html, body {
   max-width: 100% !important;
   overflow-x: hidden !important; }
-
-#body {
-  background-image: url(../img/fondo.png);
-  background-attachment: fixed;
-  margin: 0; }
-  #body .card {
-    background-color: rgba(245, 245, 245, 0.2); }
-  #body .card-header, #body .card-footer {
-    opacity: 1.2; }
-  #body .carousel {
-    box-shadow: 10px 3px 30px #202020; }
-  #body h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Dancing Script", cursive;
-    font-weight: 600;
-    width: 100vw;
-    font-size: 3em;
-    text-align: center;
-    text-shadow: 2px 1px 30px #332c30;
-    margin-top: 10px;
-    color: rgba(92, 40, 92, 0.9);
-    animation: biovana 4s forwards; }
-  #body section #main-section-div {
-    box-shadow: 2px 1px 30px #332c30;
-    display: flex;
-    justify-content: center;
-    cursor: pointer; }
-    #body section #main-section-div:hover {
-      transform: scale(1.03);
-      transition: all .5s; }
-  #body h5 #titulo {
-    font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
-    font-size: 1em;
-    padding-bottom: 15px;
-    text-align: center; }
-  #body p #text {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2.2vh;
-    text-align: center; }
-  #body #aside {
-    display: inline-block;
-    position: relative;
-    bottom: 40px;
-    margin-left: 30px; }
-  #body #aside-div2 {
-    box-shadow: 3px 3px 15px #202020; }
-    #body #aside-div2:hover {
-      transform: scale(1.05);
-      transition: all .5s; }
+  html #body, body #body {
+    background-image: url(../img/fondo.png);
+    background-attachment: fixed;
+    margin: 0; }
+    html #body .card, body #body .card {
+      background-color: rgba(245, 245, 245, 0.2); }
+    html #body .card-header, html #body .card-footer, body #body .card-header, body #body .card-footer {
+      opacity: 1.2; }
+    html #body .carousel, body #body .carousel {
+      box-shadow: 10px 3px 30px #202020; }
+    html #body h1, body #body h1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #5c285ce6;
+      font-family: "Dancing Script", cursive;
+      font-weight: 600;
+      width: 100vw;
+      font-size: 3em;
+      text-align: center;
+      text-shadow: 2px 1px 30px #332c30;
+      margin-top: 20px; }
+    html #body section #main-section-div, body #body section #main-section-div {
+      box-shadow: 2px 1px 30px #332c30;
+      display: inline-block;
+      position: relative;
+      top: 30%;
+      cursor: pointer;
+      width: 85vw;
+      margin-left: 5%; }
+      html #body section #main-section-div:hover, body #body section #main-section-div:hover {
+        transform: scale(1.02);
+        transition: all .5s; }
+      html #body section #main-section-div #titulo, body #body section #main-section-div #titulo {
+        font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
+        font-size: 2em;
+        padding-bottom: 15px;
+        padding-top: 10px;
+        text-align: center;
+        color: #974997; }
+      html #body section #main-section-div #text, body #body section #main-section-div #text {
+        font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
+        font-size: 1.1em;
+        color: #381938;
+        text-align: center; }
+    html #body .div-icon, body #body .div-icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding-top: 10px; }
+      html #body .div-icon .div-item, body #body .div-icon .div-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column; }
+        html #body .div-icon .div-item .icon, body #body .div-icon .div-item .icon {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 7em; }
+        html #body .div-icon .div-item .icon-text, body #body .div-icon .div-item .icon-text {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: wrap;
+          width: 10em;
+          font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
+          font-size: 1.1em;
+          font-weight: 600;
+          padding-top: 5px; }
+    html #body #aside, body #body #aside {
+      width: 90vw;
+      padding-left: 10vw; }
+      html #body #aside #aside-div2, body #body #aside #aside-div2 {
+        box-shadow: 3px 3px 15px #202020;
+        margin-bottom: 50px;
+        cursor: pointer; }
+        html #body #aside #aside-div2:hover, body #body #aside #aside-div2:hover {
+          transform: scale(1.04);
+          transition: all .3s; }
+        html #body #aside #aside-div2 h5, body #body #aside #aside-div2 h5 {
+          font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
+          color: #5c285c; }
