--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,22 +2,22 @@
 
 #navbar{
     box-shadow:$shadow3;
-    background-color: $mainColor; 
-    position: fixed;
-    z-index: 2;
+    background-color:$mainColor; 
     width: 100vw;
+    z-index: 1;
     .logo{
         font-family: 'Dancing Script', cursive;
         color:$secondaryColor;
-        font-size:$textXl;
-        text-shadow: $shadow2;
-        }
+        font-size:$textLg2;
+
+    }
     #boton{  
         padding-right: 40px;
         color:$black;
         &:hover{
-            color:  $white;
-            font-size:  $textMd2;
+            color: $secondaryColor;
+            transform: scale(1.3);
+            transition: all .4s;
         }
     }
 }
