--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ html, body {
     max-width: 100% !important;
     overflow-x: hidden !important;
     #body{
-        background-image: url(../img/fondo.png);
+        background-image: url(../assets/img/fondo.webp);
         background-attachment: fixed;
         margin: 0;
         .card { background-color: $bgColor; }
