--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -5,9 +5,13 @@ $mainFont:'Dancing Script', cursive;
 $secondaryFont:sans-serif,'Segoe UI', Tahoma, Verdana, ;
 
 //text sizing
-$textSm:.8em;
+$textXs:0.5em;
+$textSm:0.6em;
+$textSm2:.8em;
 $textMd:1em;
 $textMd2:1.1em;
+$textMd3:1.4em;
+$textMd4:1.7em;
 $textLg:2em;
 $textLg2:2.5em;
 $textXl:3em;
