--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ h3, body h2 {
   font-size: 3em;
   color: #5c285ce6;
   position: relative;
-  animation: h3 4s forwards;
   text-shadow: 2px 1px 30px #332c30;
   margin: 10px;
   padding-bottom: 10px; }
@@ -26,6 +25,10 @@ h3, body h2 {
       transform: scale(1.3);
       transition: all .4s; }
 
+#logo2 {
+  max-width: 150px;
+  padding-left: 20px; }
+
 #footer {
   background-color: #d7b5f7b3;
   box-shadow: 3px 3px 35px #202020; }
@@ -36,7 +39,7 @@ h3, body h2 {
 
 @media screen and (max-width: 1000px) {
   #main-section-div {
-    width: 95vw; }
+    width: 90vw; }
   #aside {
     display: flex;
     flex-direction: row;
@@ -47,8 +50,117 @@ h3, body h2 {
     display: none; } }
 
 @media screen and (max-width: 454px) {
-  #logo {
-    font-size: 1.1em; } }
+  .logo {
+    font-size: 2em !important; } }
+
+@media screen and (max-width: 335px) {
+  .logo {
+    font-size: 1.1em !important; } }
+
+@media screen and (max-width: 990px) {
+  #boton:hover {
+    transform: none !important; } }
+
+@media screen and (max-width: 993px) {
+  h1 {
+    font-size: 2.5em !important; } }
+
+@media screen and (max-width: 819px) {
+  h1 {
+    font-size: 2em !important; } }
+
+@media screen and (max-width: 665px) {
+  h1 {
+    font-size: 1.7em !important; } }
+
+@media screen and (max-width: 568px) {
+  h1 {
+    font-size: 1.4em !important; } }
+
+@media screen and (max-width: 468px) {
+  h1 {
+    font-size: 1.1em !important;
+    font-weight: 600; } }
+
+@media screen and (max-width: 819px) {
+  #titulo {
+    font-size: 1.4em !important;
+    padding: 10px !important; } }
+
+@media screen and (max-width: 665px) {
+  #titulo {
+    font-size: 1.1em !important; } }
+
+@media screen and (max-width: 568px) {
+  #titulo {
+    font-size: 1em !important;
+    font-weight: 600; } }
+
+@media screen and (max-width: 930px) {
+  #text {
+    font-size: 1em !important; } }
+
+@media screen and (max-width: 665px) {
+  #text {
+    font-size: 0.8em !important;
+    font-weight: 400; } }
+
+@media screen and (max-width: 568px) {
+  #text {
+    font-size: 0.6em !important;
+    font-weight: 600; } }
+
+@media screen and (max-width: 800px) {
+  .icon {
+    width: 5em !important; } }
+
+@media screen and (max-width: 680px) {
+  .icon {
+    width: 4em !important; } }
+
+@media screen and (max-width: 578px) {
+  .icon {
+    width: 4em !important;
+    padding: 0; } }
+
+@media screen and (max-width: 440px) {
+  .icon {
+    width: 3em !important; } }
+
+@media screen and (max-width: 360px) {
+  .icon {
+    width: 2em !important; } }
+
+@media screen and (max-width: 800px) {
+  .icon-text {
+    font-size: 1em !important;
+    width: 8em; } }
+
+@media screen and (max-width: 680px) {
+  .icon-text {
+    font-size: 0.8em !important; } }
+
+@media screen and (max-width: 578px) {
+  .icon-text {
+    font-size: 0.6em !important;
+    width: 8em !important; } }
+
+@media screen and (max-width: 440px) {
+  .icon-text {
+    width: 7em !important;
+    padding: 0;
+    text-align: center; } }
+
+@media screen and (max-width: 360px) {
+  .icon-text {
+    font-size: 0.5em !important;
+    width: 6em !important;
+    padding: 0;
+    text-align: center; } }
+
+@media screen and (max-width: 440px) {
+  .div-icon {
+    flex-wrap: wrap !important; } }
 
 body main #tienda-div {
   box-shadow: 10px 3px 30px #202020;
@@ -73,6 +185,9 @@ body #main-nosotros {
   justify-content: center;
   align-items: center;
   flex-direction: column; }
+  body #main-nosotros #sec-nosotros {
+    margin-right: 30px !important;
+    margin-left: -10px; }
 
 .main-contact {
   display: flex;
@@ -122,6 +237,8 @@ html, body {
       opacity: 1.2; }
     html #body .carousel, body #body .carousel {
       box-shadow: 10px 3px 30px #202020; }
+    html #body .div-h1, body #body .div-h1 {
+      width: 100vw; }
     html #body h1, body #body h1 {
       display: flex;
       justify-content: center;
@@ -131,7 +248,6 @@ html, body {
       font-weight: 600;
       width: 100vw;
       font-size: 3em;
-      text-align: center;
       text-shadow: 2px 1px 30px #332c30;
       margin-top: 20px; }
     html #body section #main-section-div, body #body section #main-section-div {
@@ -140,7 +256,7 @@ html, body {
       position: relative;
       top: 30%;
       cursor: pointer;
-      width: 85vw;
+      width: 90vw;
       margin-left: 5%; }
       html #body section #main-section-div:hover, body #body section #main-section-div:hover {
         transform: scale(1.02);
@@ -162,8 +278,9 @@ html, body {
       justify-content: center;
       align-items: center;
       flex-direction: row;
-      flex-wrap: wrap;
-      padding-top: 10px; }
+      flex-wrap: nowrap;
+      padding-top: 10px;
+      margin: 0; }
       html #body .div-icon .div-item, body #body .div-icon .div-item {
         display: flex;
         justify-content: center;
@@ -179,7 +296,7 @@ html, body {
           justify-content: center;
           align-items: center;
           flex-direction: wrap;
-          width: 10em;
+          width: 9em;
           font-family: sans-serif, "Segoe UI", Tahoma, Verdana;
           font-size: 1.1em;
           font-weight: 600;
