--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -59,7 +59,7 @@
 }
 @media screen and (max-width: 468px){
     h1{
-        font-size: $textMd2 !important;
+        font-size: $textMd !important;
         font-weight: $bold;
     }
 }
