--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,6 +38,7 @@ html, body {
             font-size:$textXl;
             text-shadow: $shadow2;
             margin-top: 20px;
+            margin-left: -10px;
             }
         section #main-section-div{
             box-shadow: $shadow2;
